--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
+  "singleAttributePerLine": true,
   "singleQuote": true,
-  "trailingComma": "all"
+    "trailingComma": "none",
+    "semi": true
 }
