--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
@@ -47,6 +48,7 @@
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
     "typeorm": "^0.3.27",
+    "typeorm-naming-strategies": "^4.1.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
