feat(auth): implement comprehensive authentication service with JWT support
- Added AuthService for user registration, login, refresh, and logout functionalities.
- Integrated session management with SessionService, allowing session creation, revocation, and listing.
- Implemented MutexService for handling concurrent access to resources.
- Introduced RateLimitService to prevent abuse of login and refresh endpoints.
- Developed PasswordService for secure password hashing and verification using Argon2.
- Created TokenService for signing and verifying JWT access and refresh tokens.
- Added JWT strategies for authentication using Passport.
- Implemented decorators for accessing the current user in controllers.
- Created user controller to fetch authenticated user profile.
- Added unit and e2e tests for authentication flows, ensuring robustness and security.
- Created database migration for session table setup.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,16 @@
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_DATABASE=
-NODE_ENV=
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=boukine
+NODE_ENV=development
+PORT=3000
+
+JWT_ACCESS_SECRET=
+JWT_REFRESH_SECRET=
+JWT_ACCESS_TTL=10m
+JWT_REFRESH_TTL=21d
+
+RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_MAX=60
+REDIS_URL=
