--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-esm -d typeorm.config.ts",
-    "migration:generate": "npm run typeorm -- migration:generate",
-    "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert",
+    "migration:generate": "npm run typeorm -- migration:generate -d typeorm.config.ts -n",
+    "migration:run": "npm run typeorm -- migration:run -d typeorm.config.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d typeorm.config.ts",
     "migration:create": "npm run typeorm -- migration:create"
   },
   "dependencies": {
@@ -50,7 +50,8 @@
     "slugify": "^1.6.6",
     "typeorm": "^0.3.27",
     "typeorm-naming-strategies": "^4.1.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "rate-limiter-flexible": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
